--- a/Week-09-Bootstrap/package.json
+++ b/Week-09-Bootstrap/package.json
@@ -1,7 +1,6 @@
 {
   "name": "week-09-bootstrap",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.2.3",
     "jquery": "^3.7.0"
-  }
+  },
+  "description": ""
 }
